新增送出訂單功能

--- a/front.html
+++ b/front.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/wowo-icon.png" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="images/wowo-icon.png" type="image/x-icon"> -->
     <meta property="og:site_name" content="WoWoRoom | 窩窩家居">
     <meta property="og:type" content="website">
     <meta property="og:title" content="WoWoRoom，窩窩家居">
@@ -385,7 +385,7 @@
                     <td>
                         <p>總金額</p>
                     </td>
-                    <td class="cartsTotal">NT$13,980</td>
+                    <td class="cartsTotal"></td>
                 </tr>
               </tfoot>
             </table>
@@ -432,7 +432,7 @@
                     </select>
                 </div>
             </div>
-            <input type="submit" value="送出預訂資料" class="orderInfo-btn">
+            <input type="submit" value="送出預訂資料" class="orderInfo-btn" id = "submitOrder">
         </form>
     </section>
 
