--- a/front/front.html
+++ b/front/front.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="front.css">
     <title>WoWoRoom | 窩窩家居</title>
 </head>
 <body>
