新增顯示圖表

--- a/back/back.html
+++ b/back/back.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="stylesheet" href="back.css">
-    <title>後台</title>
+    <title>WOWOROOM後台</title>
 </head>
 <body>
     <nav class="topBar">
