--- a/back/index.html
+++ b/back/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="back.css">
+    <link rel="stylesheet" href="style.css">
     <title>WOWOROOM後台</title>
 </head>
 <body>
@@ -77,6 +77,6 @@ function closeMenu() {
     menu.classList.remove('openMenu');
 }
 </script>
-<script src="back.js"></script>
+<script src="all.js"></script>
 </body>
 </html>
