--- a/front/index.html
+++ b/front/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="front.css">
+    <link rel="stylesheet" href="style.css">
     <title>WoWoRoom | 窩窩家居</title>
 </head>
 <body>
@@ -432,7 +432,7 @@ function closeMenu() {
 }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="front.js"></script>
+<script src="all.js"></script>
 </body>
 </html>
 
